--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/-1---/css/style.css">
 </head>
 <body>
     <div class="wrapper">
@@ -27,14 +27,14 @@
             <div class="container">
                 <div class="header__row">
                     <div class="header__logo">
-                        <img src="/img/logo.png" alt="">
+                        <img src="/-1---/img/logo.png" alt="">
                     </div>
                     <ul class="header__nav">
                         <li class="header__item">ПОНРАВИЛОСЬ</li>
                         <li class="header__item">ЛИЧНЫЙ КАБИНЕТ</li>
                         <li class="header__item">НАСТРОЙКИ</li>
-                        <li class="header__item"><img src="/img/Кошик.png" alt=""></li>
-                        <li class="header__item"><img src="/img/Пошук.png" alt=""></li>
+                        <li class="header__item"><img src="/-1---/img/Кошик.png" alt=""></li>
+                        <li class="header__item"><img src="/-1---/img/Пошук.png" alt=""></li>
                     </ul>
                     <div class="header__btn">
                         <div class="header__btn2"></div>
@@ -48,7 +48,7 @@
                 <div class="container">
                     <div class="main-info__row">
                         <div class="main-info__logo">
-                            <img src="/img/logo2.png" alt="">
+                            <img src="/-1---/img/logo2.png" alt="">
                             <p>
                                 САНКТ-ПЕТЕРБУРГ
                             </p>
@@ -73,17 +73,17 @@
                         </div>
                         <div class="season2020__clock">
                             <div class="item">
-                                <img src="/img/clock.png" alt="">
+                                <img src="/-1---/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
                             </div>
                             <div class="item">
-                                <img src="/img/clock.png" alt="">
+                                <img src="/-1---/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
                             </div>
                             <div class="item">
-                                <img src="/img/clock.png" alt="">
+                                <img src="/-1---/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
                             </div>
@@ -136,42 +136,42 @@
                         </div>
                         <div class="clocks-new__items">
                             <div class="item">
-                                <img src="/img/clock.png" alt="">
+                                <img src="/-1---/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
                             </div>
                             <div class="item">
-                                <img src="/img/clock.png" alt="">
+                                <img src="/-1---/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
                             </div>
                             <div class="item">
-                                <img src="/img/clock.png" alt="">
+                                <img src="/-1---/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
                             </div>
                             <div class="item">
-                                <img src="/img/clock.png" alt="">
+                                <img src="/-1---/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
                             </div>
                             <div class="item">
-                                <img src="/img/clock.png" alt="">
+                                <img src="/-1---/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
                             </div>
                             <div class="item">
-                                <img src="/img/clock.png" alt="">
+                                <img src="/-1---/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
                             </div>
                             <div class="item">
-                                <img src="/img/clock.png" alt="">
+                                <img src="/-1---/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
                             </div>
                             <div class="item">
-                                <img src="/img/clock.png" alt="">
+                                <img src="/-1---/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
                             </div>
@@ -188,16 +188,16 @@
                         </div>
                         <div class="brands__items">
                             <div class="brands__item">
-                                <img src="/img/brand.png" alt="">
+                                <img src="/-1---/img/brand.png" alt="">
                             </div>
                             <div class="brands__item">
-                                <img src="/img/brand.png" alt="">
+                                <img src="/-1---/img/brand.png" alt="">
                             </div>
                             <div class="brands__item">
-                                <img src="/img/brand.png" alt="">
+                                <img src="/-1---/img/brand.png" alt="">
                             </div>
                             <div class="brands__item">
-                                <img src="/img/brand.png" alt="">
+                                <img src="/-1---/img/brand.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -266,6 +266,6 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="/-1---/js/script.js"></script>
 </body>
 </html>
