--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/media.css">
 </head>
 <body>
     <div class="wrapper">
@@ -71,22 +73,30 @@
                             СЕЗОН 2020/21
                             <div class="line"></div>
                         </div>
-                        <div class="season2020__clock">
-                            <div class="item">
+                        <div class="image-slider swiper-container">
+                        <div class="image-slider__wrapper swiper-wrapper">
+                            <div class="image-slider__slide swiper-slide">
+                                <div class="item">
                                 <img src="/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
+                                </div>
                             </div>
-                            <div class="item">
+                            <div class="image-slider__slide swiper-slide">
+                                <div class="item">
                                 <img src="/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
+                                </div>
                             </div>
-                            <div class="item">
+                            <div class="image-slider__slide swiper-slide">
+                                <div class="item">
                                 <img src="/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
+                                </div>
                             </div>
+                        </div>
                         </div>
                     </div>
                     <div class="season2020__new-collection">
@@ -134,50 +144,70 @@
                             НОВЫЕ ПОСТУПЛЕНИЯ
                             <div class="line"></div>
                         </div>
-                        <div class="clocks-new__items">
-                            <div class="item">
-                                <img src="/img/clock.png" alt="">
-                                <p>Louis XVI ATHOS</p>
-                                <p>165 000 руб.</p>
+                        <div class="img-slider swiper-container">
+                            <!-- clocks-new__items  -->
+                        <div class="img-slider__wrapper swiper-wrapper">
+                            <div class="img-slider__slide  swiper-slide">
+                                <div class="item">
+                                    <img src="/img/clock.png" alt="">
+                                    <p>Louis XVI ATHOS</p>
+                                    <p>165 000 руб.</p>
+                                </div>
                             </div>
-                            <div class="item">
-                                <img src="/img/clock.png" alt="">
-                                <p>Louis XVI ATHOS</p>
-                                <p>165 000 руб.</p>
+                            <div class="img-slider__slide  swiper-slide">
+                                <div class="item">
+                                    <img src="/img/clock.png" alt="">
+                                    <p>Louis XVI ATHOS</p>
+                                    <p>165 000 руб.</p>
+                                </div>
                             </div>
-                            <div class="item">
-                                <img src="/img/clock.png" alt="">
-                                <p>Louis XVI ATHOS</p>
-                                <p>165 000 руб.</p>
+                            <div class="img-slider__slide  swiper-slide">
+                                <div class="item">
+                                    <img src="/img/clock.png" alt="">
+                                    <p>Louis XVI ATHOS</p>
+                                    <p>165 000 руб.</p>
+                                </div>
                             </div>
-                            <div class="item">
-                                <img src="/img/clock.png" alt="">
-                                <p>Louis XVI ATHOS</p>
-                                <p>165 000 руб.</p>
+                            <div class="img-slider__slide  swiper-slide">
+                                <div class="item">
+                                    <img src="/img/clock.png" alt="">
+                                    <p>Louis XVI ATHOS</p>
+                                    <p>165 000 руб.</p>
+                                </div>
                             </div>
-                            <div class="item">
-                                <img src="/img/clock.png" alt="">
-                                <p>Louis XVI ATHOS</p>
-                                <p>165 000 руб.</p>
+                            <div class="img-slider__slide  swiper-slide">
+                                <div class="item">
+                                    <img src="/img/clock.png" alt="">
+                                    <p>Louis XVI ATHOS</p>
+                                    <p>165 000 руб.</p>
+                                </div>
                             </div>
-                            <div class="item">
-                                <img src="/img/clock.png" alt="">
-                                <p>Louis XVI ATHOS</p>
-                                <p>165 000 руб.</p>
+                            <div class="img-slider__slide  swiper-slide">
+                                <div class="item">
+                                    <img src="/img/clock.png" alt="">
+                                    <p>Louis XVI ATHOS</p>
+                                    <p>165 000 руб.</p>
+                                </div>
                             </div>
-                            <div class="item">
-                                <img src="/img/clock.png" alt="">
-                                <p>Louis XVI ATHOS</p>
-                                <p>165 000 руб.</p>
+                            <div class="img-slider__slide  swiper-slide">
+                                <div class="item">
+                                    <img src="/img/clock.png" alt="">
+                                    <p>Louis XVI ATHOS</p>
+                                    <p>165 000 руб.</p>
+                                </div>
                             </div>
-                            <div class="item">
-                                <img src="/img/clock.png" alt="">
-                                <p>Louis XVI ATHOS</p>
-                                <p>165 000 руб.</p>
+                            <div class="img-slider__slide  swiper-slide">
+                                <div class="item">
+                                    <img src="/img/clock.png" alt="">
+                                    <p>Louis XVI ATHOS</p>
+                                    <p>165 000 руб.</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
+                        </div>
+                        </div>
+                        </div>
+            </div>
             </div>
             <div class="brands">
                 <div class="container">
@@ -186,19 +216,29 @@
                             НАШИ БРЕНДЫ
                             <div class="line"></div>
                         </div>
-                        <div class="brands__items">
-                            <div class="brands__item">
-                                <img src="/img/brand.png" alt="">
-                            </div>
-                            <div class="brands__item">
-                                <img src="/img/brand.png" alt="">
-                            </div>
-                            <div class="brands__item">
-                                <img src="/img/brand.png" alt="">
-                            </div>
-                            <div class="brands__item">
-                                <img src="/img/brand.png" alt="">
-                            </div>
+                        <div class="img-slider swiper-container">
+                            <div class="img-slider__wrapper swiper-wrapper">
+                                <div class="img-slider__slide  swiper-slide">
+                                <div class="brands__item">
+                                        <img src="/img/brand.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="img-slider__slide  swiper-slide">
+                                <div class="brands__item">
+                                        <img src="/img/brand.png" alt="">
+                                   </div>
+                                </div>
+                                <div class="img-slider__slide  swiper-slide">
+                                    <div class="brands__item">
+                                        <img src="/img/brand.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="img-slider__slide  swiper-slide">
+                                    <div class="brands__item">
+                                        <img src="/img/brand.png" alt="">
+                                    </div>
+                                </div>
+                        </div>
                         </div>
                     </div>
                 </div>
@@ -266,6 +306,7 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="/js/script.js"></script>
 </body>
 </html>
