--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/media.css">
+    <link rel="stylesheet" href="/-1---/css/style.css">
+    <link rel="stylesheet" href="/-1---/css/media.css">
 </head>
 <body>
     <div class="wrapper">
@@ -29,14 +29,14 @@
             <div class="container">
                 <div class="header__row">
                     <div class="header__logo">
-                        <img src="/img/logo.png" alt="">
+                        <img src="/-1---/img/logo.png" alt="">
                     </div>
                     <ul class="header__nav">
                         <li class="header__item">ПОНРАВИЛОСЬ</li>
                         <li class="header__item">ЛИЧНЫЙ КАБИНЕТ</li>
                         <li class="header__item">НАСТРОЙКИ</li>
-                        <li class="header__item"><img src="/img/Кошик.png" alt=""></li>
-                        <li class="header__item"><img src="/img/Пошук.png" alt=""></li>
+                        <li class="header__item"><img src="/-1---/img/Кошик.png" alt=""></li>
+                        <li class="header__item"><img src="/-1---/img/Пошук.png" alt=""></li>
                     </ul>
                     <div class="header__btn">
                         <div class="header__btn2"></div>
@@ -50,7 +50,7 @@
                 <div class="container">
                     <div class="main-info__row">
                         <div class="main-info__logo">
-                            <img src="/img/logo2.png" alt="">
+                            <img src="/-1---/img/logo2.png" alt="">
                             <p>
                                 САНКТ-ПЕТЕРБУРГ
                             </p>
@@ -77,21 +77,21 @@
                         <div class="image-slider__wrapper swiper-wrapper">
                             <div class="image-slider__slide swiper-slide">
                                 <div class="item">
-                                <img src="/img/clock.png" alt="">
+                                <img src="/-1---/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
                                 </div>
                             </div>
                             <div class="image-slider__slide swiper-slide">
                                 <div class="item">
-                                <img src="/img/clock.png" alt="">
+                                <img src="/-1---/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
                                 </div>
                             </div>
                             <div class="image-slider__slide swiper-slide">
                                 <div class="item">
-                                <img src="/img/clock.png" alt="">
+                                <img src="/-1---/img/clock.png" alt="">
                                 <p>Louis XVI ATHOS</p>
                                 <p>165 000 руб.</p>
                                 </div>
@@ -149,56 +149,56 @@
                         <div class="img-slider__wrapper swiper-wrapper">
                             <div class="img-slider__slide  swiper-slide">
                                 <div class="item">
-                                    <img src="/img/clock.png" alt="">
+                                    <img src="/-1---/img/clock.png" alt="">
                                     <p>Louis XVI ATHOS</p>
                                     <p>165 000 руб.</p>
                                 </div>
                             </div>
                             <div class="img-slider__slide  swiper-slide">
                                 <div class="item">
-                                    <img src="/img/clock.png" alt="">
+                                    <img src="/-1---/img/clock.png" alt="">
                                     <p>Louis XVI ATHOS</p>
                                     <p>165 000 руб.</p>
                                 </div>
                             </div>
                             <div class="img-slider__slide  swiper-slide">
                                 <div class="item">
-                                    <img src="/img/clock.png" alt="">
+                                    <img src="/-1---/img/clock.png" alt="">
                                     <p>Louis XVI ATHOS</p>
                                     <p>165 000 руб.</p>
                                 </div>
                             </div>
                             <div class="img-slider__slide  swiper-slide">
                                 <div class="item">
-                                    <img src="/img/clock.png" alt="">
+                                    <img src="/-1---/img/clock.png" alt="">
                                     <p>Louis XVI ATHOS</p>
                                     <p>165 000 руб.</p>
                                 </div>
                             </div>
                             <div class="img-slider__slide  swiper-slide">
                                 <div class="item">
-                                    <img src="/img/clock.png" alt="">
+                                    <img src="/-1---/img/clock.png" alt="">
                                     <p>Louis XVI ATHOS</p>
                                     <p>165 000 руб.</p>
                                 </div>
                             </div>
                             <div class="img-slider__slide  swiper-slide">
                                 <div class="item">
-                                    <img src="/img/clock.png" alt="">
+                                    <img src="/-1---/img/clock.png" alt="">
                                     <p>Louis XVI ATHOS</p>
                                     <p>165 000 руб.</p>
                                 </div>
                             </div>
                             <div class="img-slider__slide  swiper-slide">
                                 <div class="item">
-                                    <img src="/img/clock.png" alt="">
+                                    <img src="/-1---/img/clock.png" alt="">
                                     <p>Louis XVI ATHOS</p>
                                     <p>165 000 руб.</p>
                                 </div>
                             </div>
                             <div class="img-slider__slide  swiper-slide">
                                 <div class="item">
-                                    <img src="/img/clock.png" alt="">
+                                    <img src="/-1---/img/clock.png" alt="">
                                     <p>Louis XVI ATHOS</p>
                                     <p>165 000 руб.</p>
                                 </div>
@@ -220,22 +220,22 @@
                             <div class="img-slider__wrapper swiper-wrapper">
                                 <div class="img-slider__slide  swiper-slide">
                                 <div class="brands__item">
-                                        <img src="/img/brand.png" alt="">
+                                        <img src="/-1---/img/brand.png" alt="">
                                     </div>
                                 </div>
                                 <div class="img-slider__slide  swiper-slide">
                                 <div class="brands__item">
-                                        <img src="/img/brand.png" alt="">
+                                        <img src="/-1---/img/brand.png" alt="">
                                    </div>
                                 </div>
                                 <div class="img-slider__slide  swiper-slide">
                                     <div class="brands__item">
-                                        <img src="/img/brand.png" alt="">
+                                        <img src="/-1---/img/brand.png" alt="">
                                     </div>
                                 </div>
                                 <div class="img-slider__slide  swiper-slide">
                                     <div class="brands__item">
-                                        <img src="/img/brand.png" alt="">
+                                        <img src="/-1---/img/brand.png" alt="">
                                     </div>
                                 </div>
                         </div>
@@ -307,6 +307,6 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="/-1---/js/script.js"></script>
 </body>
 </html>
